cargo-features = ["profile-overrides"]

[package]
name = "gravity-wars"
version = "0.1.0"
authors = ["Ben Merritt <blm768@gmail.com>"]

edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[profile.dev]
opt-level = 0

[profile.dev.overrides."*"]
opt-level = 2

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.1"
futures = "0.1"
image = "0.21"
js-sys = "0.3"
log = "0.4"
nalgebra = "0.17"
ncollide2d = "0.18"
num-complex = "0.2"
rgb = "0.8"
serde_json = "1.0"
wasm-bindgen-futures = "0.3"

[dependencies.gltf]
version = "0.12"
features = ["extras"]

[dependencies.rand]
version = "0.6"
features = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["nightly"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Response",
    "WebGlActiveInfo",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "Window",
]
