[package]
name = "gravity-wars"
version = "0.1.0"
authors = ["Ben Merritt <blm768@gmail.com>"]

edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[profile.dev]
opt-level = 0

[profile.dev.overrides."*"]
opt-level = 2

[dependencies]
console_error_panic_hook = "^0.1"
console_log = "^0.2"
image = "^0.23"
js-sys = "^0.3"
log = "^0.4"
nalgebra = "~0.30" # Need to lock for ncollide2d
ncollide2d = "^0.33"
num-complex = "^0.4"
rand_distr = "^0.4"
rgb = "^0.8"
serde_json = "^1.0"
wasm-bindgen-futures = "^0.4"

[dependencies.getrandom]
version = "^0.2"
features = ["js"]

[dependencies.gltf]
version = "^1.0"
features = ["extras"]

[dependencies.rand]
version = "^0.8"
default_features = false
features = ["std_rng"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["nightly"]

[dependencies.web-sys]
version = "^0.3"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Response",
    "WebGlActiveInfo",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "Window",
]
