[package]
name = "gravity-wars"
version = "0.1.0"
authors = ["Ben Merritt <blm768@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.16.1"
#gltf = "0.11"

[dependencies.wasm-bindgen]
git = "https://github.com/rustwasm/wasm-bindgen"
features = ["nightly"]

[dependencies.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen"
features = ["HtmlCanvasElement", "WebGlActiveInfo", "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader"]
