[package]
name = "gravity-wars"
version = "0.1.0"
authors = ["Ben Merritt <blm768@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.16.1"
gltf = "0.11"
rgb = "0.8"

[dependencies.wasm-bindgen]
version = "0.2.23"
features = ["nightly"]

[dependencies.web-sys]
version = "0.3.0"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlActiveInfo",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
]
